# fishstock

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build  ldkfjaldkfj  run
.github/workflows/: cmake-single-platform.yml  docker-image.yml
docker/: Dockerfile  base.Dockerfile
src/: .gitignore  CMakeLists.txt  board.cpp  board.h  main.cpp  pieces.cpp  util.cpp  util.h
test/: .gitignore  CMakeLists.txt  main.cpp
test/src/: board_tests.cpp  fishstock_tests.cpp
